# Chess_bot

./: .gitignore  CMakeLists.txt  Regenerate_2019.ps1  setup_boost.cmake
WebSocketChessLib/: CMakeLists.txt
WebSocketChessLib/include/: WebSocketChesslib.hpp
WebSocketChessLib/src/: WebSocketChesslib.cpp
WebSocketChessLib/test/client/: client.cpp
WebSocketChessLib/test/server/: CMakeLists.txt  server.cpp
include/: uci.h
